--- a/index.html
+++ b/index.html
@@ -6,16 +6,15 @@
 </head>
 <body>
 	<div id="mainContainer">
-		<div id="buttons">
-			<button value="current">current</button>
-			<button value="daily">daily</button>
-			<button value="hourly">hourly</button>
+		<h2>Weathers</h2>
+		<div class="buttons">
+			<button id="current" value="current">current</button>
+			<button id="daily" value="daily">daily</button>
+			<button id="hourly" value="hourly">hourly</button>
 		</div>
-		<h2>The Current Temp Is:</h2>
 		<div id="currentTemp"></div>
 	</div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 <script type="text/javascript" src="js/script.js"></script> 
 </body>
-</html>
