--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<div id="mainContainer">
-		<h2>Weathers</h2>
+		<h2>WEATHERS</h2>
 		<div class="buttons">
 			<button id="current" value="current">current</button>
 			<button id="daily" value="daily">daily</button>
@@ -16,5 +16,8 @@
 	</div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.3.1/backbone-min.js"></script>
+<script src="./js/skycons.js"></script>
 <script type="text/javascript" src="js/script.js"></script> 
 </body>
